tests/unit/evaluation/flatzinc/test_array_too_short-bad.fzn_fd.exp
test_array_too_short-bad.fzn:1: error: array a has size 10, but was assigned 3.
----------
